hphp/hack/test/typecheck/method_call_inference/unresolved_lambda.php.exp
File "unresolved_lambda.php", line 23, characters 11-12:
Invalid argument (Typing[4053])
File "unresolved_lambda.php", line 16, characters 24-26:
No method `foo` in `B`
File "unresolved_lambda.php", line 19, characters 12-12:
This is why I think it is an object of type B
File "unresolved_lambda.php", line 7, characters 7-7:
Declaration of `B` is here
File "unresolved_lambda.php", line 26, characters 9-10:
Invalid argument (Typing[4053])
File "unresolved_lambda.php", line 17, characters 31-33:
No method `foo` in `B`
File "unresolved_lambda.php", line 19, characters 12-12:
This is why I think it is an object of type B
File "unresolved_lambda.php", line 7, characters 7-7:
Declaration of `B` is here
